--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -118,7 +118,7 @@
                                         <h:outputText value="" />
                                     </f:facet>
                                 </p:ajaxStatus>
-                                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
+                                <p:messages id="messages" autoUpdate="true" closable="true"/>
                                 <h:panelGrid columns="3" cellpadding="5">
 
                                     <h:outputLabel style="font-weight: bold" value="Company Name * "/>
