--- a/MerlionPortal/MerlionPortal-war/web/admin/viewallsubscribers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewallsubscribers.xhtml
@@ -10,7 +10,7 @@
     <c:set var="root" value="${request.contextPath}" />
     <ui:composition template="${root}/templates/templateadmin.xhtml">
         <ui:param name="pageName" value="View Subscribers" />
-        
+
         <ui:define name="more-imports">
             <ui:insert>
                 <link rel="stylesheet" href="${request.contextPath}/css/viewsubscribers.css" type="text/css" />
@@ -50,20 +50,13 @@
                             <h:outputText value="#{company.contactNumber}" />
                         </p:column>
 
-                        <p:column filterBy="#{company.package1}" headerText="Package Choice" filterMatchMode="in">
+                        <p:column filterBy="#{getAllSubscribersInfo.getPackageNumber(company.package1)}" headerText="Package Choice" filterMatchMode="in">
                             <f:facet name="filter">
-                                <p:selectCheckboxMenu label="Package" onchange="PF('companyTable').filter()" panelStyle="width:125px" scrollHeight="150">
+                                <p:selectCheckboxMenu label="Package" onchange="PF('companyTable').filter()" panelStyle="width:250px" scrollHeight="150">
                                     <f:selectItems value="#{getAllSubscribersInfo.packages}" />
                                 </p:selectCheckboxMenu>
-<!--                                <p:selectOneButton onchange="PF('companyTable').filter()">
-                                    <f:selectItem itemLabel="All" itemValue="" />
-                                    <f:selectItem itemLabel="Manu 1PL" itemValue="1" />
-                                    <f:selectItem itemLabel="Non-Manu 1PL" itemValue="2" />
-                                    <f:selectItem itemLabel="2PL" itemValue="3" />
-                                    <f:selectItem itemLabel="3/4/5PL" itemValue="4" />
-                                </p:selectOneButton>-->
                             </f:facet>
-                            <h:outputText value="#{company.package1}" />
+                            <h:outputText value="#{getAllSubscribersInfo.getPackageNumber(company.package1)}" />
                         </p:column>
 
                     </p:dataTable>
