--- a/MerlionPortal/MerlionPortal-war/web/crms/viewgrnsorderdetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewgrnsorderdetail.xhtml
@@ -121,12 +121,12 @@
                     <p:selectOneMenu id="method" value="#{viewGRNSOrderDetailMB.method}" style="width:250px">
                         <p:ajax  update="change" />
                         <f:selectItem itemLabel="Please select payment method" itemValue="" noSelectionOption="true"  />
-                        <f:selectItem itemLabel="Telegraphic Transfer" itemValue="1"  />
-                        <f:selectItem itemLabel="Credit Card" itemValue="2" />
-                        <f:selectItem itemLabel="Paper Check" itemValue="3"  />
+                        <f:selectItem itemLabel="Telegraphic Transfer" itemValue="Telegraphic Transfer"  />
+                        <f:selectItem itemLabel="Credit Card" itemValue="Credit Card" />
+                        <f:selectItem itemLabel="Paper Check" itemValue="Paper Check"  />
                     </p:selectOneMenu> 
                     <h:panelGroup id="change" >
-                        <h:panelGrid id="tt" rendered="#{viewGRNSOrderDetailMB.method eq 1}" columns="3">
+                        <h:panelGrid id="tt" rendered="#{viewGRNSOrderDetailMB.method eq 'Telegraphic Transfer'}" columns="3">
                             <p:outputLabel value="Swift Code:" /> <p:spacer width="20" height="20" />
                             <h:inputText value="#{viewGRNSOrderDetailMB.swiftcode}" styleClass="form-control" />
                             <p:outputLabel value="Account Info:" /> <p:spacer width="20" height="20" />
@@ -138,7 +138,7 @@
                             <p:commandButton value="Submit Payment Info" action="#{viewGRNSOrderDetailMB.recordPaymentInfo()}" update=":form" />
 
                         </h:panelGrid >
-                        <h:panelGrid id="cc" rendered="#{viewGRNSOrderDetailMB.method eq 2}" columns="3">
+                        <h:panelGrid id="cc" rendered="#{viewGRNSOrderDetailMB.method eq 'Credit Card'}" columns="3">
                             <p:outputLabel value="Credit Card Number:" /> <p:spacer width="20" height="20" />
                             <h:inputText value="#{viewGRNSOrderDetailMB.creditCardNo}"  styleClass="form-control" />
                             <p:outputLabel value="Amount:" /> <p:spacer width="20" height="20" />
@@ -148,7 +148,7 @@
                             <p:commandButton value="Submit Payment Info" action="#{viewGRNSOrderDetailMB.recordPaymentInfo()}" update=":form" />
 
                         </h:panelGrid>
-                        <h:panelGrid id="pc" rendered="#{viewGRNSOrderDetailMB.method eq 3}" columns="3">
+                        <h:panelGrid id="pc" rendered="#{viewGRNSOrderDetailMB.method eq 'Paper Check'}" columns="3">
                             <p:outputLabel value="Check Number:" /> <p:spacer width="20" height="20" />
                             <h:inputText value="#{viewGRNSOrderDetailMB.checkNumber}"  styleClass="form-control" />
                             <p:outputLabel value="Amount:" /> <p:spacer width="20" height="20" />
@@ -161,7 +161,39 @@
                     </h:panelGroup>
                 </p:dialog>
             </h:form>
+            <h:form id="viewInfo" >
+                <p:dialog header="View Payment Information" widgetVar="dlg3" minHeight="40">
+                    <h:panelGrid columns="3">
 
+                        <p:outputLabel value="Payment method:" /><p:spacer width="20" height="20" />
+                        <h:outputText value="#{viewGRNSOrderDetailMB.invoice.method}" />
+
+                        <c:if test="#{viewGRNSOrderDetailMB.invoice.method eq 'Telegraphic Transfer'}" >
+                            <p:outputLabel value="Swift Code:" /> <p:spacer width="20" height="20" />
+                            <h:outputText value="#{viewGRNSOrderDetailMB.invoice.swiftcode}" />
+                            <p:outputLabel value="Account Info:" /> <p:spacer width="20" height="20" />
+                            <h:outputText value="#{viewGRNSOrderDetailMB.invoice.accountInfo}" />
+                        </c:if>
+
+                        <c:if test="#{viewGRNSOrderDetailMB.order.payment.method eq 'Paper Check'}" >
+                            <p:outputLabel value="Check Number:" /> <p:spacer width="20" height="20" />
+                            <h:outputText value="#{viewGRNSOrderDetailMB.invoice.checkNumber}" />
+                        </c:if>
+
+                        <c:if test="#{viewGRNSOrderDetailMB.order.payment.method eq 'Credit Card'}" >
+                            <p:outputLabel value="Credit Card Number:" /> <p:spacer width="20" height="20" />
+                            <h:outputText value="#{viewGRNSOrderDetailMB.invoice.creditCardNo}" />
+                        </c:if>
+
+
+                        <p:outputLabel value="Amount:" /> <p:spacer width="20" height="20" />
+                        <h:outputText value="#{viewGRNSOrderDetailMB.invoice.amount}" />
+                        <p:outputLabel value="Expected Receive Date:" /> <p:spacer width="20" height="20" />
+                        <h:outputText value="#{viewGRNSOrderDetailMB.invoice.receiveDate}" />
+                    </h:panelGrid>
+                </p:dialog>
+                </c:if>
+            </h:form>
 
             <h:form id="form3">
                 <!--Requester record payment information-->
@@ -180,10 +212,10 @@
                         <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
                         <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
                     </p:confirmDialog>
+                    <p:commandButton value="View Payment Information" type="button" onclick="PF('dlg3').show();"  />
+
                 </c:if>
-                <c:if test="#{viewGRNSOrderDetailMB.order.status eq 'Payment Info Recorded'}" >
-                    <p:commandButton value="View Payment Information" />
-                </c:if>
+
 
             </h:form>
             <p:commandButton value="Go Back" icon="ui-icon-circle-arrow-w" action="viewallservicepos.xhtml?faces-redirect=true"/>
